machines: add j1708 and kline features to machines that support it
This can be used as an conditional install

Signed-off-by: Mirza Krak <mirza.krak@endian.se>

--- a/conf/machine/mx4-c61.conf
+++ b/conf/machine/mx4-c61.conf
@@ -10,5 +10,5 @@ include conf/machine/include/mx4-vf-base.inc
 
 UBOOT_MACHINE ?= "mx4_c61_defconfig"
 
-MACHINE_FEATURES += "usbgadget usbhost vfat rtc serial alsa"
+MACHINE_FEATURES += "usbgadget usbhost vfat rtc serial alsa j1708"
 
