--- a/conf/machine/mx4-mil.conf
+++ b/conf/machine/mx4-mil.conf
@@ -7,5 +7,5 @@ require conf/machine/include/mx4-tegra2-base.inc
 
 UBOOT_MACHINE = "mx4_mil_defconfig"
 
-MACHINE_FEATURES = "usbgadget usbhost vfat ext2"
+MACHINE_FEATURES = "usbgadget usbhost vfat ext2 kline"
 
