--- a/conf/machine/mx4-gtt.conf
+++ b/conf/machine/mx4-gtt.conf
@@ -7,5 +7,5 @@ require conf/machine/include/mx4-tegra2-base.inc
 
 UBOOT_MACHINE = "mx4_gtt_defconfig"
 
-MACHINE_FEATURES = "screen touchscreen usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc"
+MACHINE_FEATURES = "screen touchscreen usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc j1708"
 
