u-boot: add fw_env.config files for MX-4 machines
This is used by fw_setenv/fw_printenv U-boot utilities.

Signed-off-by: Mirza Krak <mirza.krak@endian.se>

--- a/recipes-bsp/u-boot/files/mx4-v61/fw_env.config
+++ b/recipes-bsp/u-boot/files/mx4-v61/fw_env.config
@@ -11,4 +11,5 @@
 # block which occupies the last sector (hence -0x200)
 
 # Block device name	Device offset	Env. size
-/dev/mmcblk0boot0       0x3fde00        0x2000
+/dev/mtd2 0x0000 0x20000 0x20000
+/dev/mtd3 0x0000 0x20000 0x20000
