--- a/recipes-bsp/u-boot/files/tegra2/fw_env.config
+++ b/recipes-bsp/u-boot/files/tegra2/fw_env.config
@@ -11,4 +11,4 @@
 # block which occupies the last sector (hence -0x200)
 
 # Block device name	Device offset	Env. size
-/dev/mmcblk0boot0       0x3fde00        0x2000
+/dev/mtd6 0x0000 0x1000 0x40000
