move hostmobility-extra class to an machine include instead
This way we do not require anything that is in local.conf and simply
building a specfic machine will bring in everything that is needed.

Signed-off-by: Mirza Krak <mirza.krak@endian.se>

--- a/conf/machine/mx4-c61.conf
+++ b/conf/machine/mx4-c61.conf
@@ -12,3 +12,4 @@ UBOOT_MACHINE ?= "mx4_c61_defconfig"
 
 MACHINE_FEATURES += "usbgadget usbhost vfat rtc serial alsa j1708"
 
+require conf/machine/include/mx4-extra.inc
