--- a/conf/machine/mx4-gtt.conf
+++ b/conf/machine/mx4-gtt.conf
@@ -9,3 +9,4 @@ UBOOT_MACHINE = "mx4_gtt_defconfig"
 
 MACHINE_FEATURES = "screen touchscreen usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc j1708"
 
+require conf/machine/include/mx4-extra.inc
