--- a/conf/machine/mx4-mil.conf
+++ b/conf/machine/mx4-mil.conf
@@ -9,3 +9,4 @@ UBOOT_MACHINE = "mx4_mil_defconfig"
 
 MACHINE_FEATURES = "usbgadget usbhost vfat ext2 kline"
 
+require conf/machine/include/mx4-extra.inc
