--- a/conf/machine/mx4-v61.conf
+++ b/conf/machine/mx4-v61.conf
@@ -12,3 +12,4 @@ UBOOT_MACHINE ?= "mx4_v61_defconfig"
 
 MACHINE_FEATURES += "usbgadget usbhost vfat rtc"
 
+require conf/machine/include/mx4-extra.inc
