--- a/conf/machine/mx4-t20.conf
+++ b/conf/machine/mx4-t20.conf
@@ -9,3 +9,4 @@ UBOOT_MACHINE = "mx4_t20_defconfig"
 
 MACHINE_FEATURES = "usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc"
 
+require conf/machine/include/mx4-extra.inc
