--- a/conf/machine/mx4-vcc.conf
+++ b/conf/machine/mx4-vcc.conf
@@ -9,3 +9,4 @@ UBOOT_MACHINE = "mx4_vcc_defconfig"
 
 MACHINE_FEATURES = "screen touchscreen usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc"
 
+require conf/machine/include/mx4-extra.inc
