mx4-v61: fix typo
power -> powered

Signed-off-by: Mirza Krak <mirza.krak@endian.se>

--- a/conf/machine/mx4-v61.conf
+++ b/conf/machine/mx4-v61.conf
@@ -1,7 +1,7 @@
 #@TYPE: Machine
 #@NAME: Host Mobility MX-4 V61
 #@SOC: VF500/VF610
-#@DESCRIPTION: Machine configuration for Host Mobility MX-4 V61 power by Toradex Colibri VF50/VF61 powered by Freescale Vybrid SoC
+#@DESCRIPTION: Machine configuration for Host Mobility MX-4 V61 powered by Toradex Colibri VF50/VF61 powered by Freescale Vybrid SoC
 #@MAINTAINER: Mirza Krak <mirza.krak@hostmobility.com>
 
 MACHINEOVERRIDES =. "vf:vf50:vf60:mx4_v61:"
