--- a/conf/machine/mx4-v61.conf
+++ b/conf/machine/mx4-v61.conf
@@ -6,6 +6,8 @@
 
 include conf/machine/include/mx4-vf-base.inc
 
+KERNEL_DEVICETREE += "vf610-mx4-v61.dtb"
+
 UBOOT_MACHINE ?= "mx4_v61_defconfig"
 
 MACHINE_FEATURES += "usbgadget usbhost vfat rtc"
