mx4-vf: set KERNEL_DEVICETREE instead of appending to it
Signed-off-by: Mirza Krak <mirza.krak@endian.se>

--- a/conf/machine/mx4-c61.conf
+++ b/conf/machine/mx4-c61.conf
@@ -6,7 +6,7 @@
 
 include conf/machine/include/mx4-vf-base.inc
 
-KERNEL_DEVICETREE += "vf610-mx4-c61.dtb"
+KERNEL_DEVICETREE = "vf610-mx4-c61.dtb"
 
 UBOOT_MACHINE ?= "mx4_c61_defconfig"
 
