machines: add flash to MACHINE_FEATURES
Devices that have an on board flash chip should contain the flash
feature. We can then use it to install som extra dependencies like
mtd-utils.

Signed-off-by: Mirza Krak <mirza.krak@endian.se>

--- a/conf/machine/mx4-c61.conf
+++ b/conf/machine/mx4-c61.conf
@@ -10,6 +10,6 @@ KERNEL_DEVICETREE = "vf610-mx4-c61.dtb"
 
 UBOOT_MACHINE ?= "mx4_c61_defconfig"
 
-MACHINE_FEATURES += "usbgadget usbhost vfat rtc serial alsa j1708"
+MACHINE_FEATURES += "usbgadget usbhost vfat rtc serial alsa j1708 flash"
 
 require conf/machine/include/mx4-extra.inc
