--- a/conf/machine/mx4-mil.conf
+++ b/conf/machine/mx4-mil.conf
@@ -7,6 +7,6 @@ require conf/machine/include/mx4-tegra2-base.inc
 
 UBOOT_MACHINE = "mx4_mil_defconfig"
 
-MACHINE_FEATURES = "usbgadget usbhost vfat ext2 kline"
+MACHINE_FEATURES = "usbgadget usbhost vfat ext2 kline flash"
 
 require conf/machine/include/mx4-extra.inc
