--- a/conf/machine/mx4-ct.conf
+++ b/conf/machine/mx4-ct.conf
@@ -7,6 +7,6 @@ require conf/machine/include/mx4-tegra2-base.inc
 
 UBOOT_MACHINE = "mx4_ct_defconfig"
 
-MACHINE_FEATURES = "screen touchscreen usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc j1708"
+MACHINE_FEATURES = "screen touchscreen usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc j1708 flash"
 
 require conf/machine/include/mx4-extra.inc
