--- a/conf/machine/mx4-t20.conf
+++ b/conf/machine/mx4-t20.conf
@@ -7,6 +7,6 @@ require conf/machine/include/mx4-tegra2-base.inc
 
 UBOOT_MACHINE = "mx4_t20_defconfig"
 
-MACHINE_FEATURES = "usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc"
+MACHINE_FEATURES = "usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc flash"
 
 require conf/machine/include/mx4-extra.inc
