machine: mx4-gtt/vcc: update u-boot defconfig
mx4-gtt/vcc/t20 all use the mx4_t20_defconfig

Signed-off-by: Mirza Krak <mirza.krak@endian.se>

--- a/conf/machine/mx4-vcc.conf
+++ b/conf/machine/mx4-vcc.conf
@@ -5,7 +5,7 @@
 require conf/machine/include/mx4-tegra-base.inc
 require conf/machine/include/mx4-tegra2-base.inc
 
-UBOOT_MACHINE = "mx4_vcc_defconfig"
+UBOOT_MACHINE = "mx4_t20_defconfig"
 
 MACHINE_FEATURES = "screen touchscreen usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc flash"
 
