--- a/conf/machine/mx4-t30.conf
+++ b/conf/machine/mx4-t30.conf
@@ -8,6 +8,11 @@ require conf/machine/include/mx4-tegra3-base.inc
 UBOOT_MACHINE = "mx4_t30_defconfig"
 KERNEL_DEFCONFIG ?= "mx4_t30_defconfig"
 
+PREFERRED_RPROVIDER_wpa-supplicant-cli ?= "wpa-supplicant"
+PREFERRED_RPROVIDER_wpa-supplicant-passphrase ?= "wpa-supplicant"
+PREFERRED_RPROVIDER_wpa-supplicant ?= "wpa-supplicant"
+PREFERRED_RPROVIDER_hostapd ?= "hostapd"
+
 MACHINE_FEATURES = "usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc lin"
 
 require conf/machine/include/mx4-extra.inc
