Add new configuration to make mainline for t30
Still a bit work in  progress on those files.

--- a/conf/machine/mx4-t30.conf
+++ b/conf/machine/mx4-t30.conf
@@ -6,13 +6,20 @@ require conf/machine/include/mx4-tegra-base.inc
 require conf/machine/include/mx4-tegra3-base.inc
 
 UBOOT_MACHINE = "mx4_t30_defconfig"
+#KERNEL_DEFCONFIG ?= "tegra_defconfig"
 KERNEL_DEFCONFIG ?= "mx4_t30_defconfig"
+#KERNEL_DEVICETREE = "tegra30-colibri-eval-v3.dtb"
+KERNEL_DEVICETREE = "tegra30-mx4-t30.dtb"
+
+UBOOT_ENTRYPOINT = "0x80008000"
+UBOOT_LOADADDRESS = "${UBOOT_ENTRYPOINT}"
+KERNEL_EXTRA_ARGS += " LOADADDR=0x80008000 "
 
 PREFERRED_RPROVIDER_wpa-supplicant-cli ?= "wpa-supplicant"
 PREFERRED_RPROVIDER_wpa-supplicant-passphrase ?= "wpa-supplicant"
 PREFERRED_RPROVIDER_wpa-supplicant ?= "wpa-supplicant"
 PREFERRED_RPROVIDER_hostapd ?= "hostapd"
 
-MACHINE_FEATURES = "usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc lin"
+MACHINE_FEATURES = "usbgadget usbhost vfat ext2 alsa wifi 3g rtc lin"
 
 require conf/machine/include/mx4-extra.inc
