Add flexray  to t30 conf

--- a/conf/machine/mx4-t30.conf
+++ b/conf/machine/mx4-t30.conf
@@ -20,6 +20,6 @@ PREFERRED_RPROVIDER_wpa-supplicant-passphrase ?= "wpa-supplicant"
 PREFERRED_RPROVIDER_wpa-supplicant ?= "wpa-supplicant"
 PREFERRED_RPROVIDER_hostapd ?= "hostapd"
 
-MACHINE_FEATURES = "usbgadget usbhost vfat ext2 alsa wifi 3g rtc lin"
+MACHINE_FEATURES = "usbgadget usbhost vfat ext2 alsa wifi 3g rtc lin flexray"
 
 require conf/machine/include/mx4-extra.inc
