Added LIN to machine features for MX4-V61

--- a/conf/machine/mx4-v61.conf
+++ b/conf/machine/mx4-v61.conf
@@ -10,6 +10,6 @@ KERNEL_DEVICETREE = "vf610-mx4-v61.dtb"
 
 UBOOT_MACHINE ?= "mx4_v61_defconfig"
 
-MACHINE_FEATURES += "usbgadget usbhost vfat rtc flash"
+MACHINE_FEATURES += "usbgadget usbhost vfat rtc flash lin"
 
 require conf/machine/include/mx4-extra.inc
