Add pic-firmware control from machine conf
Update mx4-commercial revision
Change pic-firmware recipe to support new way of pic firmware from
mx4-commercial

--- a/conf/machine/mx4-c61.conf
+++ b/conf/machine/mx4-c61.conf
@@ -13,3 +13,7 @@ UBOOT_MACHINE ?= "mx4_c61_defconfig"
 MACHINE_FEATURES += "usbgadget usbhost vfat rtc serial alsa j1708 flash"
 
 require conf/machine/include/mx4-extra.inc
+
+MX4_PIC_APP = "c61"
+MX4_PIC_BOOTLOADER = "c61"
+MX4_PIC_BACKUPAPP = "v61"
