--- a/conf/machine/mx4-t30.conf
+++ b/conf/machine/mx4-t30.conf
@@ -23,3 +23,7 @@ PREFERRED_RPROVIDER_hostapd ?= "hostapd"
 MACHINE_FEATURES = "usbgadget usbhost vfat ext2 alsa wifi 3g rtc lin flexray"
 
 require conf/machine/include/mx4-extra.inc
+
+MX4_PIC_APP = "t30-fr"
+MX4_PIC_BOOTLOADER = "t20"
+MX4_PIC_BACKUPAPP = "t20"
