--- a/conf/machine/mx4-v61.conf
+++ b/conf/machine/mx4-v61.conf
@@ -13,3 +13,7 @@ UBOOT_MACHINE ?= "mx4_v61_defconfig"
 MACHINE_FEATURES += "usbgadget usbhost vfat rtc flash lin"
 
 require conf/machine/include/mx4-extra.inc
+
+MX4_PIC_APP = "v61"
+MX4_PIC_BOOTLOADER = "v61"
+MX4_PIC_BACKUPAPP = "v61"
