Add more settings for mx5
Rename mobility-uboot
Add fw_env.config for mx5 in case we need it.
Minor fix to linux-mobilityx_4.19

--- a/conf/machine/mx5-pt.conf
+++ b/conf/machine/mx5-pt.conf
@@ -9,6 +9,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-mobilityx"
 KERNEL_DEVICETREE = "imx6qp-mx5.dtb"
 
 UBOOT_MACHINE ?= "mx5_imx6qp_defconfig"
+KERNEL_DEFCONFIG ?= "mx5_imx6qp_defconfig"
 
 IMAGE_BOOT_FILES = "zImage imx6qp-mx5.dtb"
 
