Add support for poky

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -18,6 +18,8 @@ BBFILES += "${@' '.join('${LAYERDIR}/%s/recipes*/*/*.bb' % layer \
 
 LAYERDEPENDS_hostmobility-bsp-layer = " \
     core \
-    toradex-nxp-layer \
-    toradex-tegra-layer \
 "
+
+
+LAYERSERIES_COMPAT_hostmobility-bsp-layer = "rocko dunfell zeus"
+
