--- a/conf/machine/mx5-pt.conf
+++ b/conf/machine/mx5-pt.conf
@@ -5,12 +5,14 @@
 
 include conf/machine/include/mx5-base.inc
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-mobilityx"
 KERNEL_DEVICETREE = "imx6qp-mx5.dtb"
+
+PREFERRED_PROVIDER_virtual/kernel = "linux-mobility-imx"
 
 UBOOT_MACHINE ?= "mx5_imx6qp_defconfig"
 KERNEL_DEFCONFIG ?= "mx5_imx6qp_defconfig"
 
 IMAGE_BOOT_FILES = "zImage imx6qp-mx5.dtb"
 
-MACHINE_FEATURES += "usbgadget usbhost vfat rtc wifi j1708"
+MACHINE_FEATURES += "usbgadget usbhost vfat rtc wifi"
+# add j1708 if needed later
