Add alsa in mx5-pt.conf
Signed-off-by: rikardo <rikard.olander@hostmobility.com>

--- a/conf/machine/mx5-pt.conf
+++ b/conf/machine/mx5-pt.conf
@@ -14,5 +14,5 @@ KERNEL_DEFCONFIG ?= "mx5_imx6qp_defconfig"
 
 IMAGE_BOOT_FILES = "zImage imx6qp-mx5.dtb"
 
-MACHINE_FEATURES += "usbgadget usbhost vfat rtc wifi"
+MACHINE_FEATURES += "usbgadget usbhost vfat rtc wifi alsa"
 # add j1708 if needed later
