Add SPL boot for mx5-pt Works still with top of uboot fork but will be migrated soon to patches.

--- a/conf/machine/mx5-pt.conf
+++ b/conf/machine/mx5-pt.conf
@@ -12,6 +12,9 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-mobility-imx"
 UBOOT_MACHINE ?= "mx5_imx6qp_defconfig"
 
 
+##UBOOT_MAKE_TARGET = "all"
+UBOOT_SUFFIX = "img"
+SPL_BINARY = "SPL"
 IMAGE_BOOT_FILES = "zImage imx6qp-mx5.dtb"
 
 MACHINE_FEATURES += "usbgadget usbhost vfat rtc wifi alsa"
