Add j1708 lib an test for mx5

--- a/conf/machine/mx5-pt.conf
+++ b/conf/machine/mx5-pt.conf
@@ -17,5 +17,4 @@ UBOOT_SUFFIX = "img"
 SPL_BINARY = "SPL"
 IMAGE_BOOT_FILES = "zImage imx6qp-mx5.dtb"
 
-MACHINE_FEATURES += "usbgadget usbhost vfat rtc wifi alsa"
-# add j1708 if needed later
+MACHINE_FEATURES += "usbgadget usbhost vfat rtc wifi alsa j1708"
