add support for hardknott in layer conf

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -21,5 +21,5 @@ LAYERDEPENDS_hostmobility-bsp-layer = " \
 "
 
 
-LAYERSERIES_COMPAT_hostmobility-bsp-layer = "rocko dunfell zeus"
+LAYERSERIES_COMPAT_hostmobility-bsp-layer = "rocko dunfell zeus hardknott"
 
