--- a/conf/machine/mx5-pt.conf
+++ b/conf/machine/mx5-pt.conf
@@ -17,4 +17,4 @@ UBOOT_SUFFIX = "img"
 SPL_BINARY = "SPL"
 IMAGE_BOOT_FILES = "zImage imx6qp-mx5.dtb"
 
-MACHINE_FEATURES += "usbgadget usbhost vfat rtc wifi alsa j1708 hm-cocpu_updater"
+MACHINE_FEATURES += "usbgadget usbhost vfat rtc wifi alsa j1708 hm-cocpu_updater hm-cocpu_updater-service"
