--- a/conf/machine/mx4-hostcom.conf
+++ b/conf/machine/mx4-hostcom.conf
@@ -7,8 +7,7 @@ include conf/machine/include/tune-cortexa5.inc
 
 MACHINEOVERRIDES =. "vf:vf50:vf60:"
 
-#Todo change this to hostcom variant
-KERNEL_DEVICETREE = "vf610-mx4-c61.dtb"
+KERNEL_DEVICETREE = "vf610-mx4-hostcom.dtb"
 
 UBOOT_MACHINE ?= "mx4_c61_defconfig"
 
@@ -18,6 +17,7 @@ MX4_PIC_APP = "c61"
 MX4_PIC_BOOTLOADER = "c61"
 MX4_PIC_BACKUPAPP = "v61"
 
+LINUX_VERSION_use-head-next = "4.19"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-hostmobility-vf"
 KERNEL_IMAGETYPE = "zImage"
 
@@ -32,7 +32,7 @@ PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-hostmobility-fw-utils"
 UBOOT_BINARY ?= "u-boot-nand.imx"
 UBOOT_MAKE_TARGET = "u-boot-nand.imx"
 
-EXTRA_IMAGEDEPENDS += "u-boot"
+#EXTRA_IMAGEDEPENDS += "u-boot"
 
 IMAGE_FSTYPES = "tar.xz ubifs"
 
@@ -41,7 +41,7 @@ MKUBIFS_ARGS = " -c 8112 -e 124KiB -m 2KiB -F"
 UBINIZE_ARGS = " -p 128KiB -m 2048 -s 2048"
 UBI_VOLNAME = "rootfs"
 
-SERIAL_CONSOLE ?= "115200 ttyLP0"
+SERIAL_CONSOLE ?= "115200 ttyLP1"
 
 BBMASK += "recipes-bsp/u-boot/u-boot-hostmobility_2019.04.bb"
 
