--- a/conf/machine/mx4-c61.conf
+++ b/conf/machine/mx4-c61.conf
@@ -6,11 +6,11 @@
 
 include conf/machine/include/mx4-vf-base.inc
 
-KERNEL_DEVICETREE = "vf610-mx4-c61.dtb"
+KERNEL_DEVICETREE = "vf610m4-colibri.dtb"
 
 UBOOT_MACHINE ?= "mx4_c61_defconfig"
 
-MACHINE_FEATURES += "usbgadget usbhost vfat rtc serial alsa j1708 flash"
+MACHINE_FEATURES += "usbgadget usbhost vfat rtc j1708 flash"
 
 
 MX4_PIC_APP = "c61"
