Add work to build ct and mil in 2.0 but only expremental This can be useull for test builds and debug CT boards. It is far from migrate to this build system it needs the linux form from mx4 repo and distro settings to build a complete system. it can build a linux kernel 3.1.10 with a rocko distro but it is not the same level of tools and other fixes.

--- a/conf/machine/mx4-mil.conf
+++ b/conf/machine/mx4-mil.conf
@@ -8,6 +8,8 @@ require conf/machine/include/mx4-tegra2-base.inc
 UBOOT_MACHINE = "mx4_mil_defconfig"
 KERNEL_DEFCONFIG ?= "mx4_mil_defconfig"
 
+KERNEL_DEVICETREE = "tegra20-mx4-mil-p1c.dtb"
+
 MACHINE_FEATURES = "usbgadget usbhost vfat ext2 kline flash"
 
 require conf/machine/include/mx4-extra.inc
