--- a/conf/machine/mx4-ct.conf
+++ b/conf/machine/mx4-ct.conf
@@ -8,6 +8,12 @@ require conf/machine/include/mx4-tegra2-base.inc
 UBOOT_MACHINE = "mx4_ct_defconfig"
 KERNEL_DEFCONFIG ?= "mx4_ct_defconfig"
 
+KERNEL_DEVICETREE = "tegra20-colibri-iris.dtb"
+
 MACHINE_FEATURES = "screen touchscreen usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc j1708 flash"
 
 require conf/machine/include/mx4-extra.inc
+
+MX4_PIC_APP = "ct"
+MX4_PIC_BOOTLOADER = "vcc"
+MX4_PIC_BACKUPAPP = "vcc"
