Include common .conf file for eval board and hmx1

--- a/conf/machine/imx8mp-var-dart-hmx0.conf
+++ b/conf/machine/imx8mp-var-dart-hmx0.conf
@@ -1,4 +1,10 @@
+# The HMX0 machine is for testing evaluation boards on the Variscite carrier
+# board.
+
 require conf/machine/imx8mp-var-dart.conf
+require conf/machine/include/hmx-base.conf
+
 MACHINEOVERRIDES_EXTENDER_imx8mp-var-dart-hmx0 = "imx8mp-var-dart"
 
 KERNEL_DEVICETREE = "freescale/imx8mp-var-dart-hmx0.dtb"
+
