--- a/conf/machine/imx8mp-var-dart-hmx1.conf
+++ b/conf/machine/imx8mp-var-dart-hmx1.conf
@@ -1,4 +1,9 @@
+# The HMX board is using a Variscite IMX8MP dart SOM
+
 require conf/machine/imx8mp-var-dart.conf
+require conf/machine/include/hmx-base.conf
+
 MACHINEOVERRIDES_EXTENDER_imx8mp-var-dart-hmx1 = "imx8mp-var-dart"
 
 KERNEL_DEVICETREE = "freescale/imx8mp-var-dart-hmx1.dtb"
+
