--- a/conf/machine/mx4-hostcom.conf
+++ b/conf/machine/mx4-hostcom.conf
@@ -49,3 +49,5 @@ BBMASK +=  "recipes-multimedia/gstreamer/"
 BBMASK +=  "recipes-core/fs-init/fs-init.bbappend"
 BBMASK +=  "recipes-core/usb-rndis-systemd"
 BBMASK += "recipes-connectivity/iproute2/iproute2_3.15.0.bb"
+
+MACHINE_EXTRA_RDEPENDS_append = " kernel-module-pic "
