Hostcom: add packagegroup-hostmobility-commercial

--- a/conf/machine/mx4-hostcom.conf
+++ b/conf/machine/mx4-hostcom.conf
@@ -50,4 +50,8 @@ BBMASK +=  "recipes-core/fs-init/fs-init.bbappend"
 BBMASK +=  "recipes-core/usb-rndis-systemd"
 BBMASK += "recipes-connectivity/iproute2/iproute2_3.15.0.bb"
 
-MACHINE_EXTRA_RDEPENDS_append = " kernel-module-pic "
+MACHINE_EXTRA_RDEPENDS_append = " \
+    kernel-module-pic \
+    ${@bb.utils.contains('LICENSE_FLAGS_WHITELIST', 'closed', \
+                          'packagegroup-hostmobility-commercial', '', d)} \
+"  
