--- a/conf/machine/mx4-hostcom.conf
+++ b/conf/machine/mx4-hostcom.conf
@@ -54,4 +54,7 @@ MACHINE_EXTRA_RDEPENDS_append = " \
     kernel-module-pic \
     ${@bb.utils.contains('LICENSE_FLAGS_WHITELIST', 'closed', \
                           'packagegroup-hostmobility-commercial', '', d)} \
-"  
+"
+
+# Use a custom hostname
+hostname:pn-base-files = "hostcom"
