Hostcom: Add PREFERRED_PROVIDER_ j1708 mx4 version

--- a/conf/machine/mx4-hostcom.conf
+++ b/conf/machine/mx4-hostcom.conf
@@ -50,6 +50,10 @@ BBMASK +=  "recipes-core/fs-init/fs-init.bbappend"
 BBMASK +=  "recipes-core/usb-rndis-systemd"
 BBMASK += "recipes-connectivity/iproute2/iproute2_3.15.0.bb"
 
+
+PREFERRED_PROVIDER_j1708-lib = "j1708-lib_1.0.6"
+PREFERRED_PROVIDER_j1708-test = "j1708-test_1.0.6"
+
 MACHINE_EXTRA_RDEPENDS_append = " \
     kernel-module-pic \
     ${@bb.utils.contains('LICENSE_FLAGS_WHITELIST', 'closed', \
