--- a/conf/machine/mx4-hostcom.conf
+++ b/conf/machine/mx4-hostcom.conf
@@ -22,7 +22,7 @@ PREFERRED_PROVIDER_virtual/kernel ?= "linux-hostmobility-vf"
 KERNEL_IMAGETYPE = "zImage"
 
 # We store kernel on seperate MTD partition so no need to deploy to rootfs.
-RDEPENDS_kernel-base = ""
+RDEPENDS:kernel-base = ""
 
 PREFERRED_PROVIDER_u-boot ?= "u-boot-hostmobility"
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-hostmobility"
@@ -54,7 +54,7 @@ BBMASK += "recipes-connectivity/iproute2/iproute2_3.15.0.bb"
 PREFERRED_PROVIDER_j1708-lib = "j1708-lib_1.0.6"
 PREFERRED_PROVIDER_j1708-test = "j1708-test_1.0.6"
 
-MACHINE_EXTRA_RDEPENDS_append = " \
+MACHINE_EXTRA_RDEPENDS:append = " \
     kernel-module-pic \
     ${@bb.utils.contains('LICENSE_FLAGS_WHITELIST', 'closed', \
                           'packagegroup-hostmobility-commercial', '', d)} \
