T30: Remove mx4-extra in conf

--- a/conf/machine/mx4-t30.conf
+++ b/conf/machine/mx4-t30.conf
@@ -2,7 +2,7 @@
 #@NAME: mx4_t30
 #@DESCRIPTION: Host Mobility MX-4 T30
 
-require conf/machine/include/mx4-tegra3-base.inc
+include conf/machine/include/mx4-tegra3-base.inc
 
 UBOOT_MACHINE = "mx4_t30_defconfig"
 
@@ -19,8 +19,6 @@ PREFERRED_RPROVIDER_wpa-supplicant ?= "wpa-supplicant"
 PREFERRED_RPROVIDER_hostapd ?= "hostapd"
 
 MACHINE_FEATURES = "usbgadget usbhost vfat ext2 alsa wifi 3g rtc lin flexray"
-
-require conf/machine/include/mx4-extra.inc
 
 MX4_PIC_APP = "t30-fr"
 MX4_PIC_BOOTLOADER = "t20"
