--- a/conf/machine/mx4-hostcom.conf
+++ b/conf/machine/mx4-hostcom.conf
@@ -56,8 +56,7 @@ PREFERRED_PROVIDER_j1708-test = "j1708-test_1.0.6"
 
 MACHINE_EXTRA_RDEPENDS:append = " \
     kernel-module-pic \
-    ${@bb.utils.contains('LICENSE_FLAGS_WHITELIST', 'closed', \
-                          'packagegroup-hostmobility-commercial', '', d)} \
+    packagegroup-hostmobility-commercial \
 "
 
 # Use a custom hostname
