MxV: initial build 5.15 with etnaviv

--- a/conf/machine/mx5-pt.conf
+++ b/conf/machine/mx5-pt.conf
@@ -9,6 +9,14 @@ KERNEL_DEVICETREE = "imx6qp-mx5.dtb"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-mobility-imx"
 
+PREFERRED_PROVIDER_virtual/egl      = "mesa"
+PREFERRED_PROVIDER_virtual/libgl    = "mesa"
+PREFERRED_PROVIDER_virtual/libgles1 = "mesa"
+PREFERRED_PROVIDER_virtual/libgles2 = "mesa"
+PREFERRED_PROVIDER_virtual/libgles3 = "mesa"
+
+PREFERRED_VERSION_weston = "10.0.0.imx"
+
 UBOOT_MACHINE ?= "mx5_imx6qp_defconfig"
 
 ##UBOOT_MAKE_TARGET = "all"
