--- a/conf/machine/imx8mp-var-dart-hmx1.conf
+++ b/conf/machine/imx8mp-var-dart-hmx1.conf
@@ -3,7 +3,7 @@
 require conf/machine/imx8mp-var-dart.conf
 require conf/machine/include/hmx-base.conf
 
-MACHINEOVERRIDES_EXTENDER_imx8mp-var-dart-hmx1 = "imx8mp-var-dart"
+MACHINEOVERRIDES_EXTENDER:imx8mp-var-dart-hmx1 = "imx8mp-var-dart"
 
 KERNEL_DEVICETREE = " \
 	freescale/imx8mp-var-dart-hmx1.dtb \
