--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -2,6 +2,6 @@
 # need to include it later to utilize the GPU or find a way that does not
 # require Wayland.
 
-IMAGE_INSTALL_remove = " \
+IMAGE_INSTALL:remove = " \
     packagegroup-imx-isp \
 "
