HMX:Update u-boot patches for uart and devicetree
Patch imx8mp-var-dart-dt8mcustomboard.dts instead of creating own device
tree file for u-boot. U-boot reads eeprom on board to determine type of
carrier board.

--- a/conf/machine/imx8mp-var-dart-hmx1.conf
+++ b/conf/machine/imx8mp-var-dart-hmx1.conf
@@ -5,6 +5,8 @@ require conf/machine/include/hmx-base.conf
 
 MACHINEOVERRIDES_EXTENDER_imx8mp-var-dart-hmx1 = "imx8mp-var-dart"
 
-KERNEL_DEVICETREE = "freescale/imx8mp-var-dart-hmx1.dtb"
-UBOOT_DTB_NAME = "imx8mp-var-dart-hmx1.dtb"
+KERNEL_DEVICETREE = " \
+	freescale/imx8mp-var-dart-hmx1.dtb \
+	freescale/imx8mp-var-dart-dt8mcustomboard.dtb \
+"
 
