HMX: BBMASK our libubootenv, networkmanager append
Our bbappends for networkmanager and libubootenv does not work with HMX.

--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -5,3 +5,8 @@
 IMAGE_INSTALL:remove = " \
     packagegroup-imx-isp \
 "
+
+BBMASK += "\
+meta-hostmobility-bsp/recipes-bsp/libubootenv \
+meta-mobility-poky-distro/recipes-connectivity/networkmanager/networkmanager_%.bbappend \
+"
