fix so packagegroup-hostmobility-commercial is add in with LICENSE_FLAGS_WHITELIST = 'commercial'

--- a/conf/machine/mx4-hostcom.conf
+++ b/conf/machine/mx4-hostcom.conf
@@ -56,7 +56,7 @@ PREFERRED_PROVIDER_j1708-test = "j1708-test_1.0.6"
 
 MACHINE_EXTRA_RDEPENDS_append = " \
     kernel-module-pic \
-    ${@bb.utils.contains('LICENSE_FLAGS_WHITELIST', 'closed', \
+    ${@bb.utils.contains('LICENSE_FLAGS_WHITELIST', 'commercial', \
                           'packagegroup-hostmobility-commercial', '', d)} \
 "
 
