Work in progress: Add Ct changes

--- a/conf/machine/mx4-ct.conf
+++ b/conf/machine/mx4-ct.conf
@@ -5,9 +5,18 @@
 require conf/machine/include/mx4-tegra-base.inc
 require conf/machine/include/mx4-tegra2-base.inc
 
-UBOOT_MACHINE = "mx4_ct_defconfig"
-KERNEL_DEFCONFIG ?= "mx4_ct_defconfig"
+#UBOOT_MACHINE = "mx4_ct_defconfig" temporary use t20_defconfig...
+UBOOT_MACHINE = "mx4_t20_defconfig"
+KERNEL_DEFCONFIG = "mx4_ct_defconfig"
 
 MACHINE_FEATURES = "screen touchscreen usbgadget usbhost vfat ext2 alsa wifi bluetooth 3g rtc j1708 flash"
 
 require conf/machine/include/mx4-extra.inc
+
+# from list https://github.dev/hostmobility/mx4/t20/setup_env.sh row36 to 100
+MX4_PIC_APP = "ct"
+MX4_PIC_BOOTLOADER = "vcc"
+MX4_PIC_BACKUPAPP = "vcc"
+
+PREFERRED_PROVIDER_j1708-lib = "j1708-lib_1.0.6"
+PREFERRED_PROVIDER_j1708-test = "j1708-test_1.0.6"
