--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -10,3 +10,6 @@ BBMASK += "\
 meta-hostmobility-bsp/recipes-bsp/libubootenv \
 meta-mobility-poky-distro/recipes-connectivity/networkmanager/networkmanager_%.bbappend \
 "
+IMAGE_INSTALL:append = " \
+    flash-script \
+"
