HMX:MXV: add hm-autostart service add hmx led lit green add first time boot check for autoboot.sh fil in media and run/media add extra remove of scr files in boot if they still exist in some way strange way. Normaly it will be removed in reflashing proceedure but if not it could continues loop each restart or boot of system.

--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -12,4 +12,5 @@ meta-mobility-poky-distro/recipes-connectivity/networkmanager/networkmanager_%.b
 "
 IMAGE_INSTALL:append = " \
     flash-script \
+    hm-autostart \
 "
