--- a/conf/machine/mx4-c61.conf
+++ b/conf/machine/mx4-c61.conf
@@ -16,3 +16,6 @@ MACHINE_FEATURES += "usbgadget usbhost vfat rtc serial alsa j1708 flash"
 MX4_PIC_APP = "c61"
 MX4_PIC_BOOTLOADER = "c61"
 MX4_PIC_BACKUPAPP = "v61"
+
+BBMASK +=  "recipes-bsp/u-boot/u-boot-variscite.bbappend"
+BBMASK +=  "recipes-kernel/linux/linux-variscite_%.bbappend"
