Build fix: Move HMX bbappends to dynamic layers
When building for the MXV, Variscite recipes are not available which
causes the .bbappend layers to not finds its .bb counterpart.

Fix avoids error: No recipes in default available for
  /work/qfirehose/sources/meta-hostmobility-bsp/recipes-bsp/u-boot/u-boot-variscite.bbappend
  /work/qfirehose/sources/meta-hostmobility-bsp/recipes-kernel/linux/linux-variscite_%.bbappend

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,13 +8,10 @@ BBFILE_COLLECTIONS += "hostmobility-bsp-layer"
 BBFILE_PATTERN_hostmobility-bsp-layer = "^${LAYERDIR}/"
 BBFILE_PRIORITY_hostmobility-bsp-layer = "91"
 
-# Let us add layer-specific bbappends which are only applied when that
-# layer is included in our configuration
-BBFILES += "${@' '.join('${LAYERDIR}/%s/recipes*/*/*.bbappend' % layer \
-               for layer in BBFILE_COLLECTIONS.split())}"
-# Add layer-specific bb files too
-BBFILES += "${@' '.join('${LAYERDIR}/%s/recipes*/*/*.bb' % layer \
-               for layer in BBFILE_COLLECTIONS.split())}"
+BBFILES_DYNAMIC += "\
+  variscite-bsp:${LAYERDIR}/dynamic-layers/recipes-bsp/u-boot/u-boot-variscite.bbappend \
+  variscite-bsp:${LAYERDIR}/dynamic-layers/recipes-kernel/linux/linux-variscite_%.bbappend \
+ "
 
 LAYERDEPENDS_hostmobility-bsp-layer = " \
     core \
@@ -23,3 +20,5 @@ LAYERDEPENDS_hostmobility-bsp-layer = " \
 
 LAYERSERIES_COMPAT_hostmobility-bsp-layer = "kirkstone"
 
+
+# meta-variscite-bsp:${LAYERDIR}/recipes*/*/*variscite*"linux-variscite/recipes-*/*/*.bbappend 
