--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -10,7 +10,12 @@ BBMASK += "\
 meta-hostmobility-bsp/recipes-bsp/libubootenv \
 meta-mobility-poky-distro/recipes-connectivity/networkmanager/networkmanager_%.bbappend \
 "
+
+# Use packagegroup for hm-interface-names ?
+#
 IMAGE_INSTALL:append = " \
     flash-script \
-    hm-autostart \
+    hm-autostart \ 
+    hm-interface-names \
+    hm-legacy-names \
 "
