HMX: add machine features to hmx-base

--- a/conf/machine/imx8mp-var-dart-hmx1.conf
+++ b/conf/machine/imx8mp-var-dart-hmx1.conf
@@ -5,6 +5,8 @@ require conf/machine/include/hmx-base.conf
 
 MACHINEOVERRIDES_EXTENDER:imx8mp-var-dart-hmx1 = "imx8mp-var-dart"
 
+MACHINE_FEATURES = "usbgadget usbhost vfat alsa pci bluetooth wifi rtc qemu-usermode"
+
 KERNEL_DEVICETREE = " \
 	freescale/imx8mp-var-dart-hmx1.dtb \
 	freescale/imx8mp-var-dart-dt8mcustomboard.dtb \
