--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -17,3 +17,8 @@ IMAGE_INSTALL:append = " \
     hm-interface-names \
     hm-legacy-names \
 "
+
+MACHINE_EXTRA_RDEPENDS:append = " \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'alsa', \
+                          'alsa-utils', '', d)} \
+"
