--- a/recipes-bsp/hm-interface-names/files/hm-interface-names.service
+++ b/recipes-bsp/hm-interface-names/files/hm-interface-names.service
@@ -1,10 +1,10 @@
 [Unit]
 Description=Legacy Network Names Service
-After=systemd-udevd.service
-Before=network.target
+Before=network-pre.target
+Wants=network-pre.target
 
 [Service]
 ExecStart=/opt/hm/hm-stable-names.sh
+Type=oneshot
+RemainAfterExit=true
 
-[Install]
-WantedBy=network.target
