Fix:Use WantedBy in Install section enable service
Information from https://systemd.io/NETWORK_ONLINE, however service does
not get enabled without the WantedBy directive.

--- a/recipes-bsp/hm-interface-names/files/hm-interface-names.service
+++ b/recipes-bsp/hm-interface-names/files/hm-interface-names.service
@@ -1,10 +1,11 @@
 [Unit]
 Description=Legacy Network Names Service
-Before=network-pre.target
-Wants=network-pre.target
 
 [Service]
 ExecStart=/opt/hm/hm-stable-names.sh
 Type=oneshot
 RemainAfterExit=true
+
+[Install]
+WantedBy=network-pre.target
 
