HMX:Put back systemd-networkd
Variscite wants to use NetworkManager, we want to use systemd-networkd.
Since the meta-variscite-bsp/recipes-core/systemd/systemd_%.bbappend
removes networkd, we cannot re-append it so we copy the bbappend recipe
to our layer and BBMASK the variscite version.

(Tried forcevariable PACKAGECONFIG but that does not seem to work with
kirstone, maybe another syntax?)

--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -9,6 +9,7 @@ IMAGE_INSTALL:remove = " \
 BBMASK += "\
 meta-hostmobility-bsp/recipes-bsp/libubootenv \
 meta-mobility-poky-distro/recipes-connectivity/networkmanager/networkmanager_%.bbappend \
+meta-variscite-bsp/recipes-core/systemd/systemd_%.bbappend \
 "
 
 PREFERRED_CONNECTIVITY_MANAGER_PACKAGES = ""
