Expremental test of build linux 6.1.26 for mx4-C61 Gets a strange build error. Maybe a fix for nand flash in the device tree, not tested.

--- a/conf/machine/mx4-c61.conf
+++ b/conf/machine/mx4-c61.conf
@@ -10,7 +10,7 @@ KERNEL_DEVICETREE = "vf610m4-colibri.dtb"
 
 UBOOT_MACHINE ?= "mx4_c61_defconfig"
 
-MACHINE_FEATURES += "usbgadget usbhost vfat rtc j1708 flash"
+MACHINE_FEATURES += "usbgadget usbhost vfat rtc serial alsa flash"
 
 
 MX4_PIC_APP = "c61"
