--- a/conf/machine/mx4-c61-rio.conf
+++ b/conf/machine/mx4-c61-rio.conf
@@ -6,13 +6,10 @@ KERNEL_DEVICETREE = "vf610-mx4-c61.dtb"
 
 UBOOT_MACHINE ?= "mx4_c61_defconfig"
 
-MACHINE_FEATURES += "usbgadget usbhost vfat rtc serial alsa j1708 flash gpio-firecrest-driver"
+MACHINE_FEATURES += "usbgadget usbhost vfat rtc serial alsa j1708 flash"
 
-KERNEL_CONFIG:append = " SERIAL_DEV_BUS=y CONFIG_SERIAL_DEV_CTRL_TTYPORT=y "
+IMAGE_INSTALL:append = " gpio-firecrest-driver"
 
 MX4_PIC_APP = "c61"
 MX4_PIC_BOOTLOADER = "c61"
 MX4_PIC_BACKUPAPP = "v61"
-
-BBMASK +=  "recipes-bsp/u-boot/u-boot-variscite.bbappend"
-BBMASK +=  "recipes-kernel/linux/linux-variscite_%.bbappend"
