C61:Rio:6.1.26: work in progress builds but does not build a uImage that is needed for u-boot 2015. possible solution could be to update u-boot. add rio add delta config and base the defconfig on imx_v6_v7(versio v7 is unbuild able).

--- a/conf/machine/mx4-c61.conf
+++ b/conf/machine/mx4-c61.conf
@@ -12,10 +12,12 @@ UBOOT_MACHINE ?= "mx4_c61_defconfig"
 
 MACHINE_FEATURES += "usbgadget usbhost vfat rtc serial alsa j1708 flash"
 
-
 MX4_PIC_APP = "c61"
 MX4_PIC_BOOTLOADER = "c61"
 MX4_PIC_BACKUPAPP = "v61"
 
 BBMASK +=  "recipes-bsp/u-boot/u-boot-variscite.bbappend"
 BBMASK +=  "recipes-kernel/linux/linux-variscite_%.bbappend"
+
+PREFERRED_PROVIDER_j1708-lib = "j1708-lib_1.0.6"
+PREFERRED_PROVIDER_j1708-test = "j1708-test_1.0.6"
