fix for the rest

--- a/conf/machine/imx8mp-var-dart-hmx1.conf
+++ b/conf/machine/imx8mp-var-dart-hmx1.conf
@@ -12,4 +12,4 @@ KERNEL_DEVICETREE = " \
 	freescale/imx8mp-var-dart-dt8mcustomboard.dtb \
 "
 
-#IMAGE_INSTALL:append = " host-watchdog-driver"
+IMAGE_INSTALL:append = " host-watchdog-driver"
