hmx: add host-watchdog-driver recipe and activate it for hmx-base.conf This will compile and start host-watchdog driver in startup of linux TODO change SRCBRANCH to main

--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -21,6 +21,7 @@ IMAGE_INSTALL:append = " \
     mdio-netlink \
     mdio-tools \
     hm-phy-setup \
+    host-watchdog-driver \
 "
 
 MACHINE_EXTRA_RDEPENDS:append = " \
