--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -22,6 +22,7 @@ IMAGE_INSTALL:append = " \
     mdio-tools \
     hm-phy-setup \
     host-watchdog-driver \
+    host-watchdog-fw \
 "
 
 MACHINE_EXTRA_RDEPENDS:append = " \
