C61/HMX/T30: Add host-poweroff service
When executing poweroff, this service will instruct the co-cpu to set
the machine to cut-off mode or shutdown.

imx8mp-var-dart: Remove host-watchdog-poweroff from systemd_%.bbappend
as the install is handled by the host-poweroff service.

Co-authored-by: Rikard Olander <rikard.olander@hostmobility.com>

--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -21,6 +21,7 @@ IMAGE_INSTALL:append = " \
     mdio-netlink \
     mdio-tools \
     hm-phy-setup \
+    host-poweroff \
     host-watchdog-driver \
     host-watchdog-fw \
 "
