hmm: Add support for host monitor mini This is most based on toradex layers so that is why I add it to dynamic layers.
Include dynamic layer for toradex ti linux
    kernel 6.1.80.
Add device tree patch V.1. That should be
compatible with Toradex Verdin dev board.

uboot customize v0.1 add epprom handling and
change the dev board so it adapts to our hmm board
(could be a seperate dts like the linux but for
now, we just make som small changes to it)

Todo customize uboot for usb flashing(
    maybe only need to change some
    environment setup).

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,6 +11,7 @@ BBFILE_PRIORITY_hostmobility-bsp-layer = "91"
 BBFILES_DYNAMIC += "\
   variscite-bsp:${LAYERDIR}/dynamic-layers/recipes-bsp/u-boot/u-boot-variscite.bbappend \
   variscite-bsp:${LAYERDIR}/dynamic-layers/recipes-kernel/linux/linux-variscite_%.bbappend \
+  toradex-ti-layer:${LAYERDIR}/dynamic-layers/toradex-ti-layer/*/*/*.bbappend \
  "
 
 LAYERDEPENDS_hostmobility-bsp-layer = " \
