--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,7 +9,8 @@ BBFILE_PATTERN_hostmobility-bsp-layer = "^${LAYERDIR}/"
 BBFILE_PRIORITY_hostmobility-bsp-layer = "91"
 
 BBFILES_DYNAMIC += "\
-  variscite-bsp:${LAYERDIR}/dynamic-layers/variscite-bsp-layer/*/*/*.bbappend \
+  variscite-bsp:${LAYERDIR}/dynamic-layers/recipes-bsp/u-boot/u-boot-variscite.bbappend \
+  variscite-bsp:${LAYERDIR}/dynamic-layers/recipes-kernel/linux/linux-variscite_%.bbappend \
   toradex-ti-layer:${LAYERDIR}/dynamic-layers/toradex-ti-layer/*/*/*.bbappend \
  "
 
