--- a/conf/machine/include/hmm-base.conf
+++ b/conf/machine/include/hmm-base.conf
@@ -10,6 +10,7 @@ IMAGE_INSTALL:append = " \
     hm-autostart \
     mdio-netlink \
     mdio-tools \
+    host-watchdog-driver \
 "
 
 MACHINE_EXTRA_RDEPENDS:append = " \
