hmm: Add preliminary watchdog fw recipe.
This should be moved to Github after it's been tested and cleaned up

--- a/conf/machine/include/hmm-base.conf
+++ b/conf/machine/include/hmm-base.conf
@@ -11,6 +11,7 @@ IMAGE_INSTALL:append = " \
     mdio-netlink \
     mdio-tools \
     host-watchdog-driver \
+    host-watchdog-fw-am62x \
 "
 
 MACHINE_EXTRA_RDEPENDS:append = " \
