hmm: Add gpio-modem-controller and  gpio-overlay-hmm to image

--- a/conf/machine/include/hmm-base.conf
+++ b/conf/machine/include/hmm-base.conf
@@ -12,6 +12,8 @@ IMAGE_INSTALL:append = " \
     mdio-tools \
     host-watchdog-driver \
     host-watchdog-fw-am62x \
+    gpio-modem-controller \
+    gpio-overlay-hmm \
 "
 
 MACHINE_EXTRA_RDEPENDS:append = " \
