Scarthgap: Remove kirkstone from layer compatbile
add Scarthgap

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -18,7 +18,7 @@ LAYERDEPENDS_hostmobility-bsp-layer = " \
 "
 
 
-LAYERSERIES_COMPAT_hostmobility-bsp-layer = "kirkstone"
+LAYERSERIES_COMPAT_hostmobility-bsp-layer = "scarthgap"
 
 
 # meta-variscite-bsp:${LAYERDIR}/recipes*/*/*variscite*"linux-variscite/recipes-*/*/*.bbappend 
