Rename and add hm-platform-version to hmm and hmx machines
Change our version 2.2x instead use Distro version

--- a/conf/machine/include/hmm-base.conf
+++ b/conf/machine/include/hmm-base.conf
@@ -6,6 +6,7 @@ BBMASK += "\
 
 PREFERRED_CONNECTIVITY_MANAGER_PACKAGES = ""
 IMAGE_INSTALL:append = " \
+    hm-platform-version \
     flash-script \
     hm-autostart \
     mdio-netlink \
