--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -14,6 +14,7 @@ meta-variscite-bsp/recipes-core/systemd/systemd_%.bbappend \
 
 PREFERRED_CONNECTIVITY_MANAGER_PACKAGES = ""
 IMAGE_INSTALL:append = " \
+    hm-platform-version \
     flash-script \
     hm-autostart \ 
     hm-interface-names \
