--- a/conf/machine/include/hmm-base.conf
+++ b/conf/machine/include/hmm-base.conf
@@ -19,5 +19,22 @@ IMAGE_INSTALL:append = " \
 MACHINE_EXTRA_RDEPENDS:append = " \
     kernel-modules \
 "
+# Remove files that are devboard-specific and image types we do not use.
+IMAGE_CLASSES:remove = "image_type_tezi"
+IMAGE_FSTYPES:remove = "teziimg tar.xz wic.xz wic.bmap"
 
+IMAGE_BOOT_FILES:append = "tiboot3.bin tispl.bin u-boot.img"
+
+# Exclude toradex devboard device tree blobs from been installed on the system bootfs.
+
+KERNEL_DEVICETREE:remove = " \
+    ${KERNEL_DTB_PREFIX}k3-am625-verdin-nonwifi-dahlia.dtb \
+    ${KERNEL_DTB_PREFIX}k3-am625-verdin-nonwifi-mallow.dtb \
+    ${KERNEL_DTB_PREFIX}k3-am625-verdin-nonwifi-yavia.dtb \
+    ${KERNEL_DTB_PREFIX}k3-am625-verdin-wifi-dahlia.dtb \
+    ${KERNEL_DTB_PREFIX}k3-am625-verdin-wifi-mallow.dtb \
+    ${KERNEL_DTB_PREFIX}k3-am625-verdin-wifi-yavia.dtb \
+"
+
+# Add wic.gz file type support to enable flashing using gzwrite in uboot
 IMAGE_FSTYPES:append = " wic.gz"
