hmx: update systemd to newer syntax

--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -9,7 +9,13 @@ IMAGE_INSTALL:remove = " \
 BBMASK += "\
 meta-hostmobility-bsp/recipes-bsp/libubootenv \
 meta-mobility-poky-distro/recipes-connectivity/networkmanager/networkmanager_%.bbappend \
-meta-variscite-bsp/recipes-core/systemd/systemd_%.bbappend \
+meta-variscite-bsp-imx/recipes-core/systemd/systemd_%.bbappend \
+meta-variscite-bsp-imx/recipes-core/systemd/systemd \
+\
+meta-imx/meta-imx-bsp/recipes-graphics/xwayland/xwayland_23.1.1.imx.bbappend \
+meta-imx/meta-imx-bsp/recipes-kernel/cryptodev/cryptodev-linux_1.13.bbappend \
+meta-variscite-sdk-imx/recipes-browser/chromium/chromium-ozone-wayland_%.bbappend \
+meta-variscite-sdk-imx/dynamic-layers/fsl-sdk-release/recipes-fsl/packagegroup/packagegroup-qt6-imx.bbappend \
 "
 
 PREFERRED_CONNECTIVITY_MANAGER_PACKAGES = ""
