TEST:hmm: test upstream 6.12 linux kernel
still work in progress to test this out(it does boot up so that is a good start) and also disabled modules
    gpio-modem-controller
    gpio-overlay-hmm

--- a/conf/machine/verdin-am62-hmm.conf
+++ b/conf/machine/verdin-am62-hmm.conf
@@ -16,3 +16,6 @@ KBUILD_DEFCONFIG = "defconfig"
 # Ignore overlay for hdmi and spidev
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = ""
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:upstream = ""
+
+MACHINEOVERRIDES .= ":upstream"
+PREFERRED_PROVIDER_virtual/dtb:upstream = ""
