TEMP: hmx: build kernel 6.6,works but need more work

--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -16,6 +16,7 @@ meta-imx/meta-imx-bsp/recipes-graphics/xwayland/xwayland_23.1.1.imx.bbappend \
 meta-imx/meta-imx-bsp/recipes-kernel/cryptodev/cryptodev-linux_1.13.bbappend \
 meta-variscite-sdk-imx/recipes-browser/chromium/chromium-ozone-wayland_%.bbappend \
 meta-variscite-sdk-imx/dynamic-layers/fsl-sdk-release/recipes-fsl/packagegroup/packagegroup-qt6-imx.bbappend \
+meta-imx/meta-imx-bsp/recipes-bsp/firmware-imx/firmware-nxp-wifi_%.bbappend \
 "
 
 PREFERRED_CONNECTIVITY_MANAGER_PACKAGES = ""
