--- a/conf/machine/imx8mp-var-dart-hmx1.conf
+++ b/conf/machine/imx8mp-var-dart-hmx1.conf
@@ -5,7 +5,7 @@ require conf/machine/include/hmx-base.conf
 
 MACHINEOVERRIDES_EXTENDER:imx8mp-var-dart-hmx1 = "imx8mp-var-dart"
 
-MACHINE_FEATURES = "usbgadget usbhost vfat alsa pci bluetooth wifi rtc qemu-usermode"
+MACHINE_FEATURES = "usbgadget usbhost vfat alsa pci bluetooth wifi rtc qemu-usermode quectel_modem"
 
 KERNEL_DEVICETREE = " \
 	freescale/imx8mp-var-dart-hmx1.dtb \
