--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,6 +11,7 @@ BBFILE_PRIORITY_hostmobility-bsp-layer = "91"
 BBFILES_DYNAMIC += "\
   variscite-bsp:${LAYERDIR}/dynamic-layers/variscite-nxp-layer/*/*/*.bbappend \
   toradex-ti-layer:${LAYERDIR}/dynamic-layers/toradex-ti-layer/*/*/*.bbappend \
+  freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bbappend \
  "
 
 LAYERDEPENDS_hostmobility-bsp-layer = " \
