hmm: Disable upstream 6.12 kernel from been built
expremental build only. does boot but issue with rpmsg (probe watchdog driver).

--- a/conf/machine/verdin-am62-hmm.conf
+++ b/conf/machine/verdin-am62-hmm.conf
@@ -17,5 +17,6 @@ KBUILD_DEFCONFIG = "defconfig"
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = ""
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:upstream = ""
 
-MACHINEOVERRIDES .= ":upstream"
+#Enable MACHINEOVERRIDES .= ":upstream" to activate 6.12 kernel.
+#MACHINEOVERRIDES .= ":upstream"
 PREFERRED_PROVIDER_virtual/dtb:upstream = ""
