hmm: hmm-base: add default path for deploy image and ipk
since we use the default on the rest of the machine this would be eiser for us to deploy under same deploy directory.

--- a/conf/machine/include/hmm-base.conf
+++ b/conf/machine/include/hmm-base.conf
@@ -35,3 +35,6 @@ KERNEL_DEVICETREE:remove = " \
 
 # Add wic.gz file type support to enable flashing using gzwrite in uboot
 IMAGE_FSTYPES:append = " wic.gz"
+
+#Fixup default deploy dir(images) to make it same as our other machines.
+TI_COMMON_DEPLOY = "${DEPLOY_DIR}"
