--- a/conf/machine/include/hmm-base.conf
+++ b/conf/machine/include/hmm-base.conf
@@ -36,5 +36,5 @@ KERNEL_DEVICETREE:remove = " \
 # Add wic.gz file type support to enable flashing using gzwrite in uboot
 IMAGE_FSTYPES:append = " wic.gz"
 
-#Fixup default deploy dir(images) to make it same as our other machines.
+# Use the same deploy directory for images as for the other machines.
 TI_COMMON_DEPLOY = "${DEPLOY_DIR}"
