--- a/conf/machine/include/hmm-base.conf
+++ b/conf/machine/include/hmm-base.conf
@@ -20,7 +20,7 @@ MACHINE_EXTRA_RDEPENDS:append = " \
 IMAGE_CLASSES:remove = "image_type_tezi"
 IMAGE_FSTYPES:remove = "teziimg tar.xz wic.xz wic.bmap"
 
-IMAGE_BOOT_FILES:append = "tiboot3.bin tispl.bin u-boot.img"
+IMAGE_BOOT_FILES:append = "tiboot3.bin tispl.bin u-boot.img boot_flash.sh"
 
 # Exclude toradex devboard device tree blobs from been installed on the system bootfs.
 
