HMX: Add IMAGE_FSTYPES with wic.gz

--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -34,3 +34,6 @@ MACHINE_EXTRA_RDEPENDS:append = " \
     hm-interface-names \
     hm-legacy-names \
 "
+
+# Add wic.gz file type support to enable flashing using gzwrite in uboot
+IMAGE_FSTYPES:append = " wic.gz"
