hmm: add serial to this machine

--- a/conf/machine/verdin-am62-hmm.conf
+++ b/conf/machine/verdin-am62-hmm.conf
@@ -7,7 +7,7 @@ require conf/machine/include/hmm-base.conf
 
 MACHINEOVERRIDES_EXTENDER:verdin-am62-hmm = "verdin-am62"
 
-MACHINE_FEATURES = "usbgadget usbhost vfat bluetooth wifi rtc qemu-usermode quectel_modem"
+MACHINE_FEATURES = "usbgadget usbhost serial vfat bluetooth wifi rtc qemu-usermode quectel_modem"
 
 KERNEL_DEVICETREE:append = "ti/k3-am625-verdin-wifi-hmm.dtb"
 
