mxv:add dynamic-layer for bb recipes

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,6 +12,7 @@ BBFILES_DYNAMIC += "\
   variscite-bsp:${LAYERDIR}/dynamic-layers/variscite-nxp-layer/*/*/*.bbappend \
   toradex-ti-layer:${LAYERDIR}/dynamic-layers/toradex-ti-layer/*/*/*.bbappend \
   freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bbappend \
+  freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bb \
  "
 
 LAYERDEPENDS_hostmobility-bsp-layer = " \
