fixup MXV:replace linux_imx_6.6 with fslc-lts_6.6

--- a/conf/machine/mx5-pt.conf
+++ b/conf/machine/mx5-pt.conf
@@ -7,7 +7,7 @@ include conf/machine/include/mxv-base.inc
 
 KERNEL_DEVICETREE = "imx6qp-mx5.dtb"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-mobility-imx"
+PREFERRED_PROVIDER_virtual/kernel = "linux-fslc-lts"
 
 UBOOT_MACHINE ?= "mx5_imx6qp_defconfig"
 
