fix new path to device tree

--- a/conf/machine/mx5-pt.conf
+++ b/conf/machine/mx5-pt.conf
@@ -5,7 +5,7 @@
 
 include conf/machine/include/mxv-base.inc
 
-KERNEL_DEVICETREE = "imx6qp-mx5.dtb"
+KERNEL_DEVICETREE = "nxp/imx/imx6qp-mx5.dtb"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-fslc-lts"
 
