MXV: based on new imx_v7_defconfig it seems to not enable modules and crypto

--- a/dynamic-layers/freescale-layer/recipes-kernel/linux/linux-mobility-imx/mx5-pt/mxv_delta_imx_v7_defconfig.cfg
+++ b/dynamic-layers/freescale-layer/recipes-kernel/linux/linux-mobility-imx/mx5-pt/mxv_delta_imx_v7_defconfig.cfg
@@ -30,3 +30,9 @@ CONFIG_USB_HUB_USB251XB=y
 CONFIG_RTC_DRV_PCF85063=y
 CONFIG_CONSOLE_LOGLEVEL_DEFAULT=4
 CONFIG_CONSOLE_LOGLEVEL_QUIET=1
+CONFIG_MODULES=y
+CONFIG_MODULE_UNLOAD=y
+CONFIG_CRYPTO=y
+CONFIG_CRYPTO_USER_API_HASH=m
+CONFIG_CRYPTO_USER_API_SKCIPHER=m
+CONFIG_CRYPTO_USER_API_AEAD=m
