--- a/conf/machine/mx5-pt.conf
+++ b/conf/machine/mx5-pt.conf
@@ -7,7 +7,7 @@ include conf/machine/include/mxv-base.inc
 
 KERNEL_DEVICETREE = "nxp/imx/imx6qp-mx5.dtb"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-fslc-lts"
+PREFERRED_PROVIDER_virtual/kernel = "linux-fslc-imx"
 
 UBOOT_MACHINE ?= "mx5_imx6qp_defconfig"
 
