HMX:systemd: add missing patches for disable connman and use systemd-networkd

--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -9,7 +9,8 @@ IMAGE_INSTALL:remove = " \
 BBMASK += "\
 meta-hostmobility-bsp/recipes-bsp/libubootenv \
 meta-mobility-poky-distro/recipes-connectivity/networkmanager/networkmanager_%.bbappend \
-meta-variscite-bsp/recipes-core/systemd/systemd_%.bbappend \
+meta-variscite-bsp-imx/recipes-core/systemd/systemd_%.bbappend \
+meta-variscite-bsp-imx/recipes-core/systemd/systemd \
 "
 
 PREFERRED_CONNECTIVITY_MANAGER_PACKAGES = ""
