HMX: add BBMask layers and bbappends in meta-imx and meta-variscite-sdk-imx
meta-variscite-sdk-imx is not needed for us.
for mainline build these should not be activated.
meta-imx/meta-imx-bsp/recipes-graphics/xwayland/xwayland_23.1.1.imx.bbappend \
meta-imx/meta-imx-bsp/recipes-kernel/cryptodev/cryptodev-linux_1.13.bbappend \
meta-imx/meta-imx-bsp/recipes-bsp/firmware-imx/firmware-nxp-wifi_%.bbappend \

--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -11,7 +11,13 @@ meta-hostmobility-bsp/recipes-bsp/libubootenv \
 meta-mobility-poky-distro/recipes-connectivity/networkmanager/networkmanager_%.bbappend \
 meta-variscite-bsp-imx/recipes-core/systemd/systemd_%.bbappend \
 meta-variscite-bsp-imx/recipes-core/systemd/systemd \
+\
+meta-variscite-sdk-imx \
+meta-imx/meta-imx-bsp/recipes-graphics/xwayland/xwayland_23.1.1.imx.bbappend \
+meta-imx/meta-imx-bsp/recipes-kernel/cryptodev/cryptodev-linux_1.13.bbappend \
+meta-imx/meta-imx-bsp/recipes-bsp/firmware-imx/firmware-nxp-wifi_%.bbappend \
 "
+#Maybe this bbmask for cryptodev-linux, nxp wifi and is needed or not but mask it fr now.
 
 PREFERRED_CONNECTIVITY_MANAGER_PACKAGES = ""
 IMAGE_INSTALL:append = " \
