--- a/conf/machine/mx5-pt.conf
+++ b/conf/machine/mx5-pt.conf
@@ -5,9 +5,9 @@
 
 include conf/machine/include/mxv-base.inc
 
-KERNEL_DEVICETREE = "imx6qp-mx5.dtb"
+KERNEL_DEVICETREE = "nxp/imx/imx6qp-mx5.dtb"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-mobility-imx"
+PREFERRED_PROVIDER_virtual/kernel = "linux-fslc-imx"
 
 UBOOT_MACHINE ?= "mx5_imx6qp_defconfig"
 
