--- a/conf/machine/imx8mp-var-dart-hmx1.conf
+++ b/conf/machine/imx8mp-var-dart-hmx1.conf
@@ -7,6 +7,8 @@ MACHINEOVERRIDES_EXTENDER:imx8mp-var-dart-hmx1 = "imx8mp-var-dart"
 
 MACHINE_FEATURES = "usbgadget usbhost vfat alsa pci bluetooth wifi rtc qemu-usermode quectel_modem"
 
+MACHINE_FEATURES:append = " nxpiw612-sdio"
+
 KERNEL_DEVICETREE = " \
 	freescale/imx8mp-var-dart-hmx1.dtb \
 	freescale/imx8mp-var-dart-dt8mcustomboard.dtb \
